--- a/public/style.css
+++ b/public/style.css
@@ -28,3 +28,13 @@
     color: white !important;
     font-size: 18px;
 }
+
+.imageAboutPage {
+    width: 100%;
+}
+
+.footer {
+    height: 100px;
+    padding: 10px;
+    margin-top: 30px;
+}
