--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -5,8 +5,7 @@
   <title>{{ title }}</title>
   <style>
     body { font-family: sans-serif; max-width: 700px; margin: auto; line-height: 1.6; }
-    nav a { margin-right: 15px; text-decoration: none;border: 1px solid;padding: 5px; background: white; }
-    nav {background: #111;padding:10px;}
+    nav a { margin-right: 15px;}
   </style>
 </head>
 <body>
