--- a/contact.njk
+++ b/contact.njk
@@ -2,4 +2,18 @@
 layout: base.njk
 title: Contact
 ---
+
 <h1>Contact</h1>
+<hr/>
+I truly value building meaningful professional relationships. Whether it’s exchanging ideas, exploring opportunities, or simply sharing insights, I’m always excited to connect with like-minded individuals. Let’s grow, learn, and create something impactful together!
+
+<p>
+Drop me an email on <a href="mailto:akashthakare@protonmail.com">akashthakare@protonmail.com</a>. 
+</p>
+<h3>Connect with me on,</h3>
+<ul>
+    <li><a href="https://www.linkedin.com/in/aakashthakare/" target="_blank">linkedin/aakashthakare</a></li>
+    <li><a href="https://github.com/aakashthakare" target="_blank">github/aakashthakare</a></li>
+</ul>
+
+Happy to Connect! 
