--- a/index.njk
+++ b/index.njk
@@ -1,25 +1,26 @@
 ---
 layout: base.njk
-title: Home
+title: About
 ---
-{% markdown %}
 
-# Welcome! 
+<p align="center">
+  <img src='./assets/images/profile.png' height='200px' width='150px' />
+</p>
 
-Hi, I’m **Akash** — a software developer passionate about problem-solving to build smarter, more efficient solutions.
+<h1>Welcome! </h1>
+<hr/>
 
-Over the years, I’ve worked on diverse software projects, learning new technologies and refining my skills along the way. I’m experimenting with real-world applications and sharing insights through my blog.
+<p>
+Hi, I’m Akash — a software consultant with a passion for solving complex problems.
+</p>
 
-## What I Do
-* **Build** reliable, maintainable solutions across different domains
-* **Experiment** with new tools and technologies to solve challenging problems
-* **Share knowledge** through blog posts
-* **Collaborate** on meaningful projects
+<p>
+Over the years, I’ve worked on diverse software projects, learning new technologies and refining my skills along the way.
+</p>
 
-## Beyond Code
-When I’m not coding, you’ll probably find me enjoying music, playing chess, or reading thought-provoking books. I believe the best work comes from staying curious and continuously learning.
+<p>
+Whether architecting scalable cloud platforms, optimizing legacy systems, or advising on best-fit technologies, I am committed to driving efficiency and innovation.
+</p>
 
-## Let’s Connect
-I’m always open to collaborations. If you have an interesting idea or challenge in mind, feel free to reach out.
-
-{% endmarkdown %}
+<h3>Beyond Code</h3>
+When I’m not coding, you’ll probably find me enjoying music, playing chess, or reading books. I believe the best work comes from staying curious and continuously learning.
