--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -2,6 +2,6 @@
 
 {% block content %}
 <h1>{{ title }}</h1>
-<p><small>{{ date | date("MMMM d, yyyy") }}</small></p>
-{{ content | safe }}
+<small>{{ date | date("MMMM d, yyyy") }}</small>
+<hr/>
 {% endblock %}
