--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -1,7 +1,8 @@
 {% extends "layouts/base.njk" %}
 
 {% block content %}
-<h1>{{ title }}</h1>
-<small>{{ date | date("MMMM d, yyyy") }}</small>
+<h1 style='padding-bottom:0;margin-bottom:0'>{{ title }}</h1>
+<small style='color:gray'>{{ date | date("MMMM d, yyyy") }}</small>
+<small style='color:gray;float:right;'>{{ content | readingTime }}</small>
 <hr/>
 {% endblock %}
