Configuration for creating presentations.

--- a/index.njk
+++ b/index.njk
@@ -3,8 +3,9 @@ layout: base.njk
 title: About
 ---
 
+
 <p align="center">
-  <img src='./assets/images/profile.png' height='200px' width='150px' />
+  <img src='./assets/images/site/profile.png' height='200px' width='200px' />
 </p>
 
 <h1>Welcome! </h1>
@@ -20,7 +21,7 @@ Currently serving at <a href="https://www.thoughtworks.com/" target="_blank">Tho
 
 <p>
 Over the years, I’ve worked on diverse software projects, learning new technologies and refining my skills along the way.
-Whether architecting scalable cloud platforms, optimizing legacy systems, or advising on best-fit technologies, I am committed to driving efficiency and innovation.
+Whether architecting scalable cloud platforms, modernizing legacy systems, or advising on best-fit technologies, I am committed to driving efficiency and innovation.
 </p>
 <p>
 When I’m not coding, you’ll probably find me enjoying music, playing chess, or reading books. I believe the best work comes from staying curious and continuously learning.
