--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -8,6 +8,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="https://unpkg.com/reveal.js/dist/reveal.css" />
+  <link rel="stylesheet" href="https://unpkg.com/reveal.js/dist/theme/black.css" />
+  <script src="https://unpkg.com/reveal.js/dist/reveal.js"></script>
+  <script src="https://unpkg.com/reveal.js/plugin/markdown/markdown.js"></script>
 
   <style>
     html { scrollbar-gutter: stable; }
@@ -18,7 +23,7 @@
     nav a { border-bottom: 3px solid transparent; text-decoration:none; padding-bottom:5px;color: inherit;}
     nav a.active { border-bottom-color: inherit; }
   </style>
-   <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
 </head>
 <body>
   <nav>
@@ -26,6 +31,7 @@
       <li><a href="/" class="{% if title == 'About' %}active{% endif %}">About</a></li>
       <li><a href="/writing/" class="{% if title == 'Writing' or '/writing/' in page.url %}active{% endif %}">Writing</a></li>
       <li><a href="/contact/" class="{% if title == 'Contact' %}active{% endif %}">Contact</a></li>
+      <li><a href="/slide/" class="{% if title == 'Slide' %}active{% endif %}" hidden>Slide</a></li>
     </ul>
   </nav>
   <main>
@@ -36,7 +42,9 @@
     <small >&copy; {{ "" | currentYear }} Akash Thakare</small>
   </footer>
   <script>
-    mermaid.initialize({ startOnLoad: true });
+    mermaid.initialize({
+      startOnLoad: true
+    });
   </script>
 </body>
 </html>
