--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -22,16 +22,22 @@
     nav li { margin-right: 15px; }
     nav a { border-bottom: 3px solid transparent; text-decoration:none; padding-bottom:5px;color: inherit;}
     nav a.active { border-bottom-color: inherit; }
+    blockquote{ border-left: 3px solid #888; margin-left: 0; padding-left: 5px; color: #888;}
   </style>
   <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/default.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/languages/go.min.js"></script>
 </head>
 <body>
   <nav>
     <ul>
       <li><a href="/" class="{% if title == 'About' %}active{% endif %}">About</a></li>
       <li><a href="/writing/" class="{% if title == 'Writing' or '/writing/' in page.url %}active{% endif %}">Writing</a></li>
+      <li><a href="/slide/" class="{% if title == 'Slide' %}active{% endif %}">Slide</a></li>
       <li><a href="/contact/" class="{% if title == 'Contact' %}active{% endif %}">Contact</a></li>
-      <li><a href="/slide/" class="{% if title == 'Slide' %}active{% endif %}" hidden>Slide</a></li>
     </ul>
   </nav>
   <main>
@@ -46,5 +52,6 @@
       startOnLoad: true
     });
   </script>
+  <script>hljs.highlightAll();</script>
 </body>
 </html>
